kubernetes-stack/overlays/dev/networkpolicy-allow-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller-to-http-services
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - coordinator
          - admin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 8002
